syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "BatchServices";

import "batch-model.proto";
import "sitewhere-common.proto";

// Batch management APIs.
service BatchManagement {

	// ########################
	// ### BATCH OPERATIONS ###
	// ########################

	// Create a new batch operation.
	rpc CreateBatchOperation (GCreateBatchOperationRequest) returns (GCreateBatchOperationResponse) {}

	// Create a new batch command invocation.
	rpc CreateBatchCommandInvocation (GCreateBatchCommandInvocationRequest) returns (GCreateBatchCommandInvocationResponse) {}

	// Update a batch operation.
	rpc UpdateBatchOperation (GUpdateBatchOperationRequest) returns (GUpdateBatchOperationResponse) {}

	// Get a batch operation by id.
	rpc GetBatchOperation (GGetBatchOperationRequest) returns (GGetBatchOperationResponse) {}

	// Get a batch operation by token.
	rpc GetBatchOperationByToken (GGetBatchOperationByTokenRequest) returns (GGetBatchOperationByTokenResponse) {}

	// List batch operations that meet criteria.
	rpc ListBatchOperations (GListBatchOperationsRequest) returns (GListBatchOperationsResponse) {}

	// Delete a batch operation.
	rpc DeleteBatchOperation (GDeleteBatchOperationRequest) returns (GDeleteBatchOperationResponse) {}

	// ################################
	// ### BATCH OPERATION ELEMENTS ###
	// ################################
	
	// List batch operation elements.
	rpc ListBatchOperationElements (GListBatchOperationElementsRequest) returns (GListBatchOperationElementsResponse) {}
	
	// Update a batch operation element.
	rpc UpdateBatchOperationElement (GUpdateBatchOperationElementRequest) returns (GUpdateBatchOperationElementResponse) {}
}

// ########################
// ### BATCH OPERATIONS ###
// ########################
	
// Request for creating a batch operation.
message GCreateBatchOperationRequest {
	com.sitewhere.grpc.model.GBatchOperationCreateRequest request = 1;
}
	
// Response for creating a batch operation.
message GCreateBatchOperationResponse {
	com.sitewhere.grpc.model.GBatchOperation batchOperation = 1;
}
		
// Request for creating a batch command invocation.
message GCreateBatchCommandInvocationRequest {
	com.sitewhere.grpc.model.GBatchCommandInvocationCreateRequest request = 1;
}
	
// Response for creating a batch command invocation.
message GCreateBatchCommandInvocationResponse {
	com.sitewhere.grpc.model.GBatchOperation batchOperation = 1;
}
	
// Request for updating a batch operation.
message GUpdateBatchOperationRequest {
	com.sitewhere.grpc.model.GUUID batchOperationId = 1;
	com.sitewhere.grpc.model.GBatchOperationUpdateRequest request = 2;
}
	
// Response for updating a batch operation.
message GUpdateBatchOperationResponse {
	com.sitewhere.grpc.model.GBatchOperation batchOperation = 1;
}
	
// Request for getting a batch operation by id.
message GGetBatchOperationRequest {
	com.sitewhere.grpc.model.GUUID batchOperationId = 1;
}
	
// Response for getting a batch operation by id.
message GGetBatchOperationResponse {
	com.sitewhere.grpc.model.GBatchOperation batchOperation = 1;
}
	
// Request for getting a batch operation by token.
message GGetBatchOperationByTokenRequest {
	string token = 1;
}
	
// Response for getting a batch operation by token.
message GGetBatchOperationByTokenResponse {
	com.sitewhere.grpc.model.GBatchOperation batchOperation = 1;
}
	
// Request for listing batch operations that meet criteria.
message GListBatchOperationsRequest {
	com.sitewhere.grpc.model.GBatchOperationSearchCriteria criteria = 1;
}
	
// Response for listing batch operations that meet criteria.
message GListBatchOperationsResponse {
	com.sitewhere.grpc.model.GBatchOperationSearchResults results = 1;
}
	
// Request for deleting a batch operation.
message GDeleteBatchOperationRequest {
	com.sitewhere.grpc.model.GUUID batchOperationId = 1;
}
	
// Response for deleting a batch operation.
message GDeleteBatchOperationResponse {
	com.sitewhere.grpc.model.GBatchOperation batchOperation = 1;
}

// ################################
// ### BATCH OPERATION ELEMENTS ###
// ################################
	
// Request for listing batch operation elements that meet criteria.
message GListBatchOperationElementsRequest {
	com.sitewhere.grpc.model.GUUID batchOperationId = 1;
	com.sitewhere.grpc.model.GBatchOperationElementSearchCriteria criteria = 2;
}
	
// Response for listing batch operation elements that meet criteria.
message GListBatchOperationElementsResponse {
	com.sitewhere.grpc.model.GBatchOperationElementSearchResults results = 1;
}
	
// Request for updating a batch operation element.
message GUpdateBatchOperationElementRequest {
	com.sitewhere.grpc.model.GUUID elementId = 1;
	com.sitewhere.grpc.model.GBatchOperationElementUpdateRequest request = 3;
}
	
// Response for updating a batch operation element.
message GUpdateBatchOperationElementResponse {
	com.sitewhere.grpc.model.GBatchOperationElement element = 1;
}
