syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "BatchModel";

import "sitewhere-common.proto";

// ########################
// ### BATCH OPERATIONS ###
// ########################

// Batch operation status.
enum GBatchOperationStatus {
	BATCH_OPERATION_STATUS_UNPROCESSED = 0;
	BATCH_OPERATION_STATUS_PROCESSING = 1;
	BATCH_OPERATION_STATUS_FINISHED_SUCCESSFULLY = 2;
	BATCH_OPERATION_STATUS_FINISHED_WITH_ERRORS = 3;
}

// Batch operation create request.
message GBatchOperationCreateRequest {
	GOptionalString token = 1;
	string operationType = 2;
	map<string, string> parameters = 3;
	repeated string deviceTokens = 4;
	map<string, string> metadata = 5;
}

// Batch command invocation create request.
message GBatchCommandInvocationCreateRequest {
	GOptionalString token = 1;
	string commandToken = 2;
	map<string, string> parameters = 3;
	repeated string deviceTokens = 4;
}

// Batch operation update request.
message GBatchOperationUpdateRequest {
	GBatchOperationStatus processingStatus = 1;
	uint64 processingStartedDate = 2;
	uint64 processingEndedDate = 3;
	map<string, string> metadata = 4;
}

// Criteria for searching batch operations.
message GBatchOperationSearchCriteria {
	GOptionalBoolean includeDeleted = 1;
	GPaging paging = 2;
}

// Results for batch operation search.
message GBatchOperationSearchResults {
	int64 count = 1;
	repeated GBatchOperation batchOperations = 2;
}

// Batch operation.
message GBatchOperation {
	GUUID id = 1;
	string token = 2;
	string operationType = 3;
	map<string, string> parameters = 4;
	GBatchOperationStatus processingStatus = 5;
	uint64 processingStartedDate = 6;
	uint64 processingEndedDate = 7;
	map<string, string> metadata = 8;
	GEntityInformation entityInformation = 9;
}

// ################################
// ### BATCH OPERATION ELEMENTS ###
// ################################

// Batch element processing status.
enum GElementProcessingStatus {
	BATCH_ELEMENT_STATUS_UNPROCESSED = 0;
	BATCH_ELEMENT_STATUS_PROCESSING = 1;
	BATCH_ELEMENT_STATUS_FAILED = 2;
	BATCH_ELEMENT_STATUS_SUCCEEDED = 3;
}

// Batch element update request.
message GBatchOperationElementUpdateRequest {
	GElementProcessingStatus processingStatus = 1;
	uint64 processedDate = 2;
	map<string, string> metadata = 3;
}

// Criteria for searching batch elements.
message GBatchOperationElementSearchCriteria {
	GElementProcessingStatus processingStatus = 1;
	GPaging paging = 2;
}

// Results for batch element search.
message GBatchOperationElementSearchResults {
	int64 count = 1;
	repeated GBatchOperationElement batchOperationElements = 2;
}

// Batch element.
message GBatchOperationElement {
	GUUID id = 1;
	GUUID batchOperationId = 2;
	GUUID deviceId = 3;
	GElementProcessingStatus processingStatus = 4;
	uint64 processedDate = 5;
	map<string, string> metadata = 6;
}
